<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_my_background"
    >
    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:layout_centerVertical="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLog"
            android:hint="@string/log_hint_log"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/fab_margin"
            android:alpha="0.5"
            android:padding="@dimen/margins_padding_login"
            android:layout_margin="@dimen/margins_padding_login"
            android:background="@color/colorPrimaryDark"
            android:elevation="50dp"
            android:imeOptions="actionDone"
             />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/etPas"
            android:hint="@string/log_hint_pas"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/fab_margin"
            android:alpha="0.5"
            android:padding="@dimen/margins_padding_login"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="@dimen/margins_padding_login"
             />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_btn"
        android:textColor="@android:color/white"
        android:id="@+id/logBtn"
        android:background="@drawable/ic_login_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/my_elevation"
        android:layout_alignLeft="@+id/login_linear_layout"
        android:layout_alignStart="@+id/login_linear_layout"
        android:layout_alignRight="@+id/login_linear_layout"
        android:layout_alignEnd="@+id/login_linear_layout" />
    <TextView
        android:text="@string/login_sign_up_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sign_up"
        android:textColor="@color/splash"
        android:textStyle="italic"
        android:textSize="15dp"
        android:layout_above="@+id/login_linear_layout"
        android:layout_alignLeft="@+id/login_linear_layout"
        android:layout_alignStart="@+id/login_linear_layout" />
</RelativeLayout>